[package]
name = "fmlrc"
version = "0.1.0"
authors = ["holtjma <jholt@hudsonalpha.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "0.17.4"
env_logger = "0.7.1"
flate2 = "1.0.14"
libmath = "0.1.4"
log = "0.4.8"
subprocess = "0.2.4"
tempfile = "3.1.0"
threadpool = "1.7.1"
triple_accel = "0.3.0"
