[package]
name = "fmlrc"
version = "0.1.1"
authors = ["holtjma <jholt@hudsonalpha.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "FM-index Long Read Corrector - Rust implementation"
homepage = "https://github.com/HudsonAlpha/rust-fmlrc"
repository = "https://github.com/HudsonAlpha/rust-fmlrc"
# documentation - auto-linked
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "0.31.0"
clap = "2.33.1"
env_logger = "0.7.1"
exitcode = "1.1.2"
flate2 = "1.0.14"
libmath = "0.1.4"
log = "0.4.8"
needletail = "0.3.2"
serde_json = "1.0.58"
subprocess = "0.2.4"
tempfile = "3.1.0"
threadpool = "1.7.1"
triple_accel = "0.3.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bv_bwt_benchmark"
harness = false